[package]
name = "plato"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", default-features = false, features = ["rt", "macros", "net", "time"] }

# Axum: micro-routing architecture powered by matchit radix tree
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
mimalloc = { version = "0.1" , features = ["no_thp"] }

[profile.release]
opt-level = 3           
lto = "fat"             
codegen-units = 1	
panic = "abort"         